syntax="proto3";

package protos;

message ProtocolState {
    message Peer {
        bytes ID = 1;
        PeerStatus Status = 3;
    }

    enum PeerStatus {
        Connected = 0;
        Disconnected = 1;
    }

    repeated Peer Peers = 1;
    bool Patch = 2;

    bytes Head = 3;
    uint64 Height = 4;

    int64 Timestamp = 10;
}

message ViteHandshake {
    bytes Genesis = 1;
    bytes Head = 2;
    uint64 Height = 3;
    bytes Key = 4;
    bytes Signature = 5;
    bytes FileAddress = 6;
}
